wx-base/include/generated.h

typedef wxFileType::MessageParameters MessageParameters;
// CLASS: wxFileSystem
wxClassInfo *wxFileSystem_CLASSINFO();
wxFileSystem *wxFileSystem_new();
void wxFileSystem_ChangePathTo(wxFileSystem * self, const wxString * location, bool is_dir);
bool wxFileSystem_FindFileInPath(wxFileSystem * self, wxString * p_str, const wxString * path, const wxString * file);
wxString *wxFileSystem_FindFirst(wxFileSystem * self, const wxString * wildcard, int flags);
wxString *wxFileSystem_FindNext(wxFileSystem * self);
wxString *wxFileSystem_GetPath(const wxFileSystem * self);
wxFSFile * wxFileSystem_OpenFile(wxFileSystem * self, const wxString * location, int flags);
void wxFileSystem_AddHandler(wxFileSystemHandler * handler);
wxFileSystemHandler * wxFileSystem_RemoveHandler(wxFileSystemHandler * handler);
wxString *wxFileSystem_FileNameToURL(const wxFileName * filename);
bool wxFileSystem_HasHandlerForPath(const wxString * location);
wxFileName *wxFileSystem_URLToFileName(const wxString * url);
// CLASS: wxFileSystemWatcher
wxClassInfo *wxFileSystemWatcher_CLASSINFO();
wxFileSystemWatcher *wxFileSystemWatcher_new();
bool wxFileSystemWatcher_Add(wxFileSystemWatcher * self, const wxFileName * path, int events);
bool wxFileSystemWatcher_AddTree(wxFileSystemWatcher * self, const wxFileName * path, int events, const wxString * filter);
bool wxFileSystemWatcher_Remove(wxFileSystemWatcher * self, const wxFileName * path);
bool wxFileSystemWatcher_RemoveTree(wxFileSystemWatcher * self, const wxFileName * path);
bool wxFileSystemWatcher_RemoveAll(wxFileSystemWatcher * self);
int wxFileSystemWatcher_GetWatchedPathsCount(const wxFileSystemWatcher * self);
int wxFileSystemWatcher_GetWatchedPaths(const wxFileSystemWatcher * self, wxArrayString * paths);
void wxFileSystemWatcher_SetOwner(wxFileSystemWatcher * self, wxEvtHandler * handler);
// CLASS: wxFileSystemWatcherEvent
wxClassInfo *wxFileSystemWatcherEvent_CLASSINFO();
wxFileSystemWatcherEvent *wxFileSystemWatcherEvent_new(int change_type, int watchid);
wxFileSystemWatcherEvent *wxFileSystemWatcherEvent_new2(int change_type, const wxFileName * path, const wxFileName * new_path, int watchid);
wxFileName *wxFileSystemWatcherEvent_GetPath(const wxFileSystemWatcherEvent * self);
wxFileName *wxFileSystemWatcherEvent_GetNewPath(const wxFileSystemWatcherEvent * self);
int wxFileSystemWatcherEvent_GetChangeType(const wxFileSystemWatcherEvent * self);
bool wxFileSystemWatcherEvent_IsError(const wxFileSystemWatcherEvent * self);
wxString *wxFileSystemWatcherEvent_GetErrorDescription(const wxFileSystemWatcherEvent * self);
wxString *wxFileSystemWatcherEvent_ToString(const wxFileSystemWatcherEvent * self);
// CLASS: wxFileType
void wxFileType_delete(wxFileType *self);
wxFileType *wxFileType_new(const wxFileTypeInfo * ft_info);
bool wxFileType_GetDescription(const wxFileType * self, wxString * desc);
bool wxFileType_GetExtensions(wxFileType * self, wxArrayString * extensions);
bool wxFileType_GetIcon(const wxFileType * self, wxIconLocation * icon_loc);
bool wxFileType_GetMimeType(const wxFileType * self, wxString * mime_type);
bool wxFileType_GetMimeTypes(const wxFileType * self, wxArrayString * mime_types);
bool wxFileType_GetOpenCommand(wxFileType * self, wxString * command, const MessageParameters * params);
wxString *wxFileType_GetOpenCommand1(const wxFileType * self, const wxString * filename);
bool wxFileType_GetPrintCommand(const wxFileType * self, wxString * command, const MessageParameters * params);
wxString *wxFileType_GetExpandedCommand(const wxFileType * self, const wxString * verb, const wxFileType::MessageParameters * params);
size_t wxFileType_GetAllCommands(const wxFileType * self, wxArrayString * verbs, wxArrayString * commands, const wxFileType::MessageParameters * params);
wxString *wxFileType_ExpandCommand(const wxString * command, const MessageParameters * params);
// CLASS: wxFilterClassFactory
wxClassInfo *wxFilterClassFactory_CLASSINFO();
const wxFilterClassFactory * wxFilterClassFactory_GetNext(const wxFilterClassFactory * self);
wxString *wxFilterClassFactory_GetProtocol(const wxFilterClassFactory * self);
wxFilterInputStream * wxFilterClassFactory_NewStream(const wxFilterClassFactory * self, wxInputStream * stream);
wxFilterOutputStream * wxFilterClassFactory_NewStream1(const wxFilterClassFactory * self, wxOutputStream * stream);
wxFilterInputStream * wxFilterClassFactory_NewStream2(const wxFilterClassFactory * self, wxInputStream * stream);
wxFilterOutputStream * wxFilterClassFactory_NewStream3(const wxFilterClassFactory * self, wxOutputStream * stream);
wxString *wxFilterClassFactory_PopExtension(const wxFilterClassFactory * self, const wxString * location);
void wxFilterClassFactory_PushFront(wxFilterClassFactory * self);
void wxFilterClassFactory_Remove(wxFilterClassFactory * self);
const wxFilterClassFactory * wxFilterClassFactory_GetFirst();
// CLASS: wxHashTable
wxClassInfo *wxHashTable_CLASSINFO();
void wxHashTable_BeginFind(wxHashTable * self);
void wxHashTable_Clear(wxHashTable * self);
wxObject * wxHashTable_Delete(wxHashTable * self, long key);
wxObject * wxHashTable_Delete1(wxHashTable * self, const wxString * key);
void wxHashTable_DeleteContents(wxHashTable * self, bool flag);
wxObject * wxHashTable_Get(wxHashTable * self, long key);
wxObject * wxHashTable_Get1(wxHashTable * self, const char * key);
size_t wxHashTable_GetCount(const wxHashTable * self);
wxHashTable::Node * wxHashTable_Next(wxHashTable * self);
void wxHashTable_Put(wxHashTable * self, long key, wxObject * object);
void wxHashTable_Put1(wxHashTable * self, const char * key, wxObject * object);
long wxHashTable_MakeKey(const wxString * string);
// CLASS: wxIconLocation
void wxIconLocation_delete(wxIconLocation *self);
bool wxIconLocation_IsOk(const wxIconLocation * self);
void wxIconLocation_SetFileName(wxIconLocation * self, const wxString * filename);
wxString *wxIconLocation_GetFileName(const wxIconLocation * self);
// CLASS: wxIdleEvent
wxClassInfo *wxIdleEvent_CLASSINFO();
wxIdleEvent *wxIdleEvent_new();
bool wxIdleEvent_MoreRequested(const wxIdleEvent * self);
void wxIdleEvent_RequestMore(wxIdleEvent * self, bool need_more);
// CLASS: wxInitializer
void wxInitializer_delete(wxInitializer *self);
wxInitializer *wxInitializer_new(int argc, wxChar ** argv);
bool wxInitializer_IsOk(const wxInitializer * self);
// CLASS: wxLocale
void wxLocale_delete(wxLocale *self);
wxLocale *wxLocale_new();
wxLocale *wxLocale_new1(int language, int flags);
wxLocale *wxLocale_new2(const wxString * name, const wxString * short_name, const wxString * locale, bool b_load_default);
bool wxLocale_AddCatalog(wxLocale * self, const wxString * domain);
wxString *wxLocale_GetCanonicalName(const wxLocale * self);
wxString *wxLocale_GetHeaderValue(const wxLocale * self, const wxString * header, const wxString * domain);
int wxLocale_GetLanguage(const wxLocale * self);
wxString *wxLocale_GetLocale(const wxLocale * self);
wxString *wxLocale_GetName(const wxLocale * self);
wxString *wxLocale_GetString(const wxLocale * self, const wxString * orig_string, const wxString * domain);
wxString *wxLocale_GetSysName(const wxLocale * self);
bool wxLocale_Init(wxLocale * self, int language, int flags);
bool wxLocale_Init1(wxLocale * self, const wxString * name, const wxString * short_name, const wxString * locale, bool b_load_default);
bool wxLocale_IsLoaded(const wxLocale * self, const wxString * domain);
bool wxLocale_IsOk(const wxLocale * self);
void wxLocale_AddCatalogLookupPathPrefix(const wxString * prefix);
void wxLocale_AddLanguage(const wxLanguageInfo * info);
const wxLanguageInfo * wxLocale_FindLanguageInfo(const wxString * locale);
const wxLanguageInfo * wxLocale_GetLanguageInfo(int lang);
wxString *wxLocale_GetLanguageName(int lang);
wxString *wxLocale_GetLanguageCanonicalName(int lang);
wxString *wxLocale_GetSystemEncodingName();
int wxLocale_GetSystemLanguage();
bool wxLocale_IsAvailable(int lang);