wx-base/src/generated/ffi.rs


    // wxFileSystem
    pub fn wxFileSystem_CLASSINFO() -> *mut c_void;
    pub fn wxFileSystem_new() -> *mut c_void;
    pub fn wxFileSystem_ChangePathTo(self_: *mut c_void, location: *const c_void, is_dir: bool);
    pub fn wxFileSystem_FindFileInPath(
        self_: *mut c_void,
        p_str: *mut c_void,
        path: *const c_void,
        file: *const c_void,
    ) -> bool;
    pub fn wxFileSystem_FindFirst(
        self_: *mut c_void,
        wildcard: *const c_void,
        flags: c_int,
    ) -> *mut c_void;
    pub fn wxFileSystem_FindNext(self_: *mut c_void) -> *mut c_void;
    pub fn wxFileSystem_GetPath(self_: *const c_void) -> *mut c_void;
    pub fn wxFileSystem_OpenFile(
        self_: *mut c_void,
        location: *const c_void,
        flags: c_int,
    ) -> *mut c_void;
    pub fn wxFileSystem_AddHandler(handler: *mut c_void);
    pub fn wxFileSystem_RemoveHandler(handler: *mut c_void) -> *mut c_void;
    pub fn wxFileSystem_FileNameToURL(filename: *const c_void) -> *mut c_void;
    pub fn wxFileSystem_HasHandlerForPath(location: *const c_void) -> bool;
    pub fn wxFileSystem_URLToFileName(url: *const c_void) -> *mut c_void;

    // wxFileSystemWatcher
    pub fn wxFileSystemWatcher_CLASSINFO() -> *mut c_void;
    pub fn wxFileSystemWatcher_new() -> *mut c_void;
    // DTOR: pub fn wxFileSystemWatcher_~wxFileSystemWatcher(self_: *mut c_void);
    pub fn wxFileSystemWatcher_Add(self_: *mut c_void, path: *const c_void, events: c_int) -> bool;
    pub fn wxFileSystemWatcher_AddTree(
        self_: *mut c_void,
        path: *const c_void,
        events: c_int,
        filter: *const c_void,
    ) -> bool;
    pub fn wxFileSystemWatcher_Remove(self_: *mut c_void, path: *const c_void) -> bool;
    pub fn wxFileSystemWatcher_RemoveTree(self_: *mut c_void, path: *const c_void) -> bool;
    pub fn wxFileSystemWatcher_RemoveAll(self_: *mut c_void) -> bool;
    pub fn wxFileSystemWatcher_GetWatchedPathsCount(self_: *const c_void) -> c_int;
    pub fn wxFileSystemWatcher_GetWatchedPaths(self_: *const c_void, paths: *mut c_void) -> c_int;
    pub fn wxFileSystemWatcher_SetOwner(self_: *mut c_void, handler: *mut c_void);

    // wxFileSystemWatcherEvent
    pub fn wxFileSystemWatcherEvent_CLASSINFO() -> *mut c_void;
    pub fn wxFileSystemWatcherEvent_new(change_type: c_int, watchid: c_int) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxFileSystemWatcherEvent_new1(change_type: c_int, warning_type: wxFSWWarningType, error_msg: *const c_void, watchid: c_int) -> *mut c_void;
    pub fn wxFileSystemWatcherEvent_new2(
        change_type: c_int,
        path: *const c_void,
        new_path: *const c_void,
        watchid: c_int,
    ) -> *mut c_void;
    pub fn wxFileSystemWatcherEvent_GetPath(self_: *const c_void) -> *mut c_void;
    pub fn wxFileSystemWatcherEvent_GetNewPath(self_: *const c_void) -> *mut c_void;
    pub fn wxFileSystemWatcherEvent_GetChangeType(self_: *const c_void) -> c_int;
    pub fn wxFileSystemWatcherEvent_IsError(self_: *const c_void) -> bool;
    pub fn wxFileSystemWatcherEvent_GetErrorDescription(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxFileSystemWatcherEvent_GetWarningType(self_: *const c_void) -> wxFSWWarningType;
    pub fn wxFileSystemWatcherEvent_ToString(self_: *const c_void) -> *mut c_void;

    // wxFileType
    pub fn wxFileType_delete(self_: *mut c_void);
    pub fn wxFileType_new(ft_info: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxFileType_~wxFileType(self_: *mut c_void);
    pub fn wxFileType_GetDescription(self_: *const c_void, desc: *mut c_void) -> bool;
    pub fn wxFileType_GetExtensions(self_: *mut c_void, extensions: *mut c_void) -> bool;
    pub fn wxFileType_GetIcon(self_: *const c_void, icon_loc: *mut c_void) -> bool;
    pub fn wxFileType_GetMimeType(self_: *const c_void, mime_type: *mut c_void) -> bool;
    pub fn wxFileType_GetMimeTypes(self_: *const c_void, mime_types: *mut c_void) -> bool;
    pub fn wxFileType_GetOpenCommand(
        self_: *mut c_void,
        command: *mut c_void,
        params: *const c_void,
    ) -> bool;
    pub fn wxFileType_GetOpenCommand1(self_: *const c_void, filename: *const c_void)
        -> *mut c_void;
    pub fn wxFileType_GetPrintCommand(
        self_: *const c_void,
        command: *mut c_void,
        params: *const c_void,
    ) -> bool;
    pub fn wxFileType_GetExpandedCommand(
        self_: *const c_void,
        verb: *const c_void,
        params: *const c_void,
    ) -> *mut c_void;
    pub fn wxFileType_GetAllCommands(
        self_: *const c_void,
        verbs: *mut c_void,
        commands: *mut c_void,
        params: *const c_void,
    ) -> usize;
    pub fn wxFileType_ExpandCommand(command: *const c_void, params: *const c_void) -> *mut c_void;

    // wxFilterClassFactory
    pub fn wxFilterClassFactory_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxFilterClassFactory_CanHandle(self_: *const c_void, protocol: *const c_void, type_: wxStreamProtocolType) -> bool;
    pub fn wxFilterClassFactory_GetNext(self_: *const c_void) -> *mut c_void;
    pub fn wxFilterClassFactory_GetProtocol(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxFilterClassFactory_GetProtocols(self_: *const c_void, type_: wxStreamProtocolType) -> *const c_void;
    pub fn wxFilterClassFactory_NewStream(self_: *const c_void, stream: *mut c_void)
        -> *mut c_void;
    pub fn wxFilterClassFactory_NewStream1(
        self_: *const c_void,
        stream: *mut c_void,
    ) -> *mut c_void;
    pub fn wxFilterClassFactory_NewStream2(
        self_: *const c_void,
        stream: *mut c_void,
    ) -> *mut c_void;
    pub fn wxFilterClassFactory_NewStream3(
        self_: *const c_void,
        stream: *mut c_void,
    ) -> *mut c_void;
    pub fn wxFilterClassFactory_PopExtension(
        self_: *const c_void,
        location: *const c_void,
    ) -> *mut c_void;
    pub fn wxFilterClassFactory_PushFront(self_: *mut c_void);
    pub fn wxFilterClassFactory_Remove(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxFilterClassFactory_Find(protocol: *const c_void, type_: wxStreamProtocolType) -> *mut c_void;
    pub fn wxFilterClassFactory_GetFirst() -> *mut c_void;

    // wxHashTable
    pub fn wxHashTable_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxHashTable_new(key_type: wxKeyType, size: usize) -> *mut c_void;
    // DTOR: pub fn wxHashTable_~wxHashTable(self_: *mut c_void);
    pub fn wxHashTable_BeginFind(self_: *mut c_void);
    pub fn wxHashTable_Clear(self_: *mut c_void);
    pub fn wxHashTable_Delete(self_: *mut c_void, key: c_long) -> *mut c_void;
    pub fn wxHashTable_Delete1(self_: *mut c_void, key: *const c_void) -> *mut c_void;
    pub fn wxHashTable_DeleteContents(self_: *mut c_void, flag: bool);
    pub fn wxHashTable_Get(self_: *mut c_void, key: c_long) -> *mut c_void;
    pub fn wxHashTable_Get1(self_: *mut c_void, key: *const c_void) -> *mut c_void;
    pub fn wxHashTable_GetCount(self_: *const c_void) -> usize;
    pub fn wxHashTable_Next(self_: *mut c_void) -> *mut c_void;
    pub fn wxHashTable_Put(self_: *mut c_void, key: c_long, object: *mut c_void);
    pub fn wxHashTable_Put1(self_: *mut c_void, key: *const c_void, object: *mut c_void);
    pub fn wxHashTable_MakeKey(string: *const c_void) -> c_long;

    // wxIconLocation
    pub fn wxIconLocation_delete(self_: *mut c_void);
    pub fn wxIconLocation_IsOk(self_: *const c_void) -> bool;
    pub fn wxIconLocation_SetFileName(self_: *mut c_void, filename: *const c_void);
    pub fn wxIconLocation_GetFileName(self_: *const c_void) -> *mut c_void;

    // wxIdleEvent
    pub fn wxIdleEvent_CLASSINFO() -> *mut c_void;
    pub fn wxIdleEvent_new() -> *mut c_void;
    pub fn wxIdleEvent_MoreRequested(self_: *const c_void) -> bool;
    pub fn wxIdleEvent_RequestMore(self_: *mut c_void, need_more: bool);
    // NOT_SUPPORTED: pub fn wxIdleEvent_GetMode() -> wxIdleMode;
    // NOT_SUPPORTED: pub fn wxIdleEvent_SetMode(mode: wxIdleMode);

    // wxInitializer
    pub fn wxInitializer_delete(self_: *mut c_void);
    pub fn wxInitializer_new(argc: c_int, argv: *mut c_void) -> *mut c_void;
    pub fn wxInitializer_IsOk(self_: *const c_void) -> bool;
    // DTOR: pub fn wxInitializer_~wxInitializer(self_: *mut c_void);

    // wxLocale
    pub fn wxLocale_delete(self_: *mut c_void);
    pub fn wxLocale_new() -> *mut c_void;
    pub fn wxLocale_new1(language: c_int, flags: c_int) -> *mut c_void;
    pub fn wxLocale_new2(
        name: *const c_void,
        short_name: *const c_void,
        locale: *const c_void,
        b_load_default: bool,
    ) -> *mut c_void;
    // DTOR: pub fn wxLocale_~wxLocale(self_: *mut c_void);
    pub fn wxLocale_AddCatalog(self_: *mut c_void, domain: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxLocale_AddCatalog1(self_: *mut c_void, domain: *const c_void, msg_id_language: wxLanguage) -> bool;
    // NOT_SUPPORTED: pub fn wxLocale_AddCatalog2(self_: *mut c_void, domain: *const c_void, msg_id_language: wxLanguage, msg_id_charset: *const c_void) -> bool;
    pub fn wxLocale_GetCanonicalName(self_: *const c_void) -> *mut c_void;
    pub fn wxLocale_GetHeaderValue(
        self_: *const c_void,
        header: *const c_void,
        domain: *const c_void,
    ) -> *mut c_void;
    pub fn wxLocale_GetLanguage(self_: *const c_void) -> c_int;
    pub fn wxLocale_GetLocale(self_: *const c_void) -> *mut c_void;
    pub fn wxLocale_GetName(self_: *const c_void) -> *mut c_void;
    pub fn wxLocale_GetString(
        self_: *const c_void,
        orig_string: *const c_void,
        domain: *const c_void,
    ) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxLocale_GetString1(self_: *const c_void, orig_string: *const c_void, orig_string2: *const c_void, n: unsigned, domain: *const c_void) -> *mut c_void;
    pub fn wxLocale_GetSysName(self_: *const c_void) -> *mut c_void;
    pub fn wxLocale_Init(self_: *mut c_void, language: c_int, flags: c_int) -> bool;
    pub fn wxLocale_Init1(
        self_: *mut c_void,
        name: *const c_void,
        short_name: *const c_void,
        locale: *const c_void,
        b_load_default: bool,
    ) -> bool;
    pub fn wxLocale_IsLoaded(self_: *const c_void, domain: *const c_void) -> bool;
    pub fn wxLocale_IsOk(self_: *const c_void) -> bool;
    pub fn wxLocale_AddCatalogLookupPathPrefix(prefix: *const c_void);
    pub fn wxLocale_AddLanguage(info: *const c_void);
    pub fn wxLocale_FindLanguageInfo(locale: *const c_void) -> *const c_void;
    pub fn wxLocale_GetLanguageInfo(lang: c_int) -> *const c_void;
    pub fn wxLocale_GetLanguageName(lang: c_int) -> *mut c_void;
    pub fn wxLocale_GetLanguageCanonicalName(lang: c_int) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxLocale_GetSystemEncoding() -> wxFontEncoding;
    pub fn wxLocale_GetSystemEncodingName() -> *mut c_void;
    pub fn wxLocale_GetSystemLanguage() -> c_int;
    // NOT_SUPPORTED: pub fn wxLocale_GetInfo(index: wxLocaleInfo, cat: wxLocaleCategory) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxLocale_GetOSInfo(index: wxLocaleInfo, cat: wxLocaleCategory) -> *mut c_void;
    pub fn wxLocale_IsAvailable(lang: c_int) -> bool;
